--- a/simpleChatApp/simpleChatApp/Base.lproj/Main.storyboard
+++ b/simpleChatApp/simpleChatApp/Base.lproj/Main.storyboard
@@ -31,9 +31,30 @@
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SPd-Rj-XBD" userLabel="Dock View">
                                 <rect key="frame" x="16" y="540" width="568" height="60"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iI1-nA-KKr">
+                                        <rect key="frame" x="20" y="15" width="469" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JWK-vN-bHP">
+                                        <rect key="frame" x="504" y="15" width="46" height="30"/>
+                                        <state key="normal" title="Send">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gAs-hY-z1r"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="3md-9Y-RbB"/>
+                                    <constraint firstItem="iI1-nA-KKr" firstAttribute="leading" secondItem="SPd-Rj-XBD" secondAttribute="leading" constant="20" id="5pf-p8-PcY"/>
+                                    <constraint firstItem="iI1-nA-KKr" firstAttribute="top" secondItem="SPd-Rj-XBD" secondAttribute="top" constant="15" id="7HB-Hf-Wxs"/>
+                                    <constraint firstAttribute="trailing" secondItem="JWK-vN-bHP" secondAttribute="trailing" constant="18" id="8Wj-rk-X6F"/>
+                                    <constraint firstItem="JWK-vN-bHP" firstAttribute="leading" secondItem="iI1-nA-KKr" secondAttribute="trailing" constant="15" id="Do5-Bg-71n"/>
+                                    <constraint firstItem="JWK-vN-bHP" firstAttribute="top" secondItem="SPd-Rj-XBD" secondAttribute="top" constant="15" id="oSB-pm-1kD"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -49,7 +70,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dockViewHeightContraint" destination="3md-9Y-RbB" id="4WQ-K6-3C9"/>
                         <outlet property="messageTableView" destination="YYh-3m-O0B" id="NXa-Rs-miB"/>
+                        <outlet property="messageTextField" destination="iI1-nA-KKr" id="80N-N8-CPO"/>
+                        <outlet property="sendButton" destination="JWK-vN-bHP" id="fPN-oU-qWO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
